Update: Service mgmt, resource matric
